--- a/ep13/app1/templates/home.html
+++ b/ep13/app1/templates/home.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
+    {% comment %}
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    {% endcomment %}
   </head>
   <body>
+    {% comment %}
     <style>
       body {
         display: flex;
@@ -47,7 +56,7 @@
         background-color: #45a049;
       }
     </style>
-    {% comment %} End of css {% endcomment %} {% comment %}
+    {% endcomment %} {% comment %} End of css {% endcomment %} {% comment %}
 
     <form action="https://formspree.io/f/mknlgndv" method="POST">
       {{ form.as_p }}
@@ -57,7 +66,7 @@
     {% endcomment %} {% comment %} much better way {% endcomment %} <br />
     <form action="https://formspree.io/f/mknlgndv" method="POST">
       {% for fm in form %} <br />
-      {{ form.label_tags }} <br />
+      {{ fm.label_tag }} <br />
       {{ fm }} <br />
       {% endfor %} <br />
 
