--- a/ep13/app1/templates/home.html
+++ b/ep13/app1/templates/home.html
@@ -14,7 +14,6 @@
     {% endcomment %}
   </head>
   <body>
-    {% comment %}
     <style>
       body {
         display: flex;
@@ -56,7 +55,7 @@
         background-color: #45a049;
       }
     </style>
-    {% endcomment %} {% comment %} End of css {% endcomment %} {% comment %}
+    {% comment %} End of css {% endcomment %} {% comment %}
 
     <form action="https://formspree.io/f/mknlgndv" method="POST">
       {{ form.as_p }}
@@ -64,7 +63,12 @@
       <input type="submit" value="submit" />
     </form>
     {% endcomment %} {% comment %} much better way {% endcomment %} <br />
-    <form action="https://formspree.io/f/mknlgndv" method="POST">
+    {% comment %} for success_page {% endcomment %} {% if messages %} {% for
+    message in messages %}
+    <div class="alert {{ message.tags }}">{{ message }}</div>
+    {% endfor %} {% endif %} {% comment %} end for success_page {% endcomment %}
+
+    <form action="" method="POST">
       {% for fm in form %} <br />
       {{ fm.label_tag }} <br />
       {{ fm }} <br />
